[gd_scene load_steps=6 format=3 uid="uid://cv10u2l1qbvl5"]

[ext_resource type="Texture2D" uid="uid://cue7tu4py7rtg" path="res://assets/tilesets/temp.png" id="1_g8fjr"]
[ext_resource type="FontFile" uid="uid://c0spcda47imn2" path="res://assets/fonts/theBoldFont.ttf" id="2_8uusr"]
[ext_resource type="Script" path="res://assets/scripts/server.gd" id="2_yvyiq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b7vgu"]
texture = ExtResource("1_g8fjr")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-63, -65, 64, -64, 64, 64, -64, 64)

[sub_resource type="TileSet" id="2"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_b7vgu")

[node name="Game" type="Node2D"]
script = ExtResource("2_yvyiq")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(6.10352e-05, 3.05176e-05)
scale = Vector2(0.25, 0.25)
tile_set = SubResource("2")
cell_quadrant_size = 48
collision_visibility_mode = 1
format = 2
layer_0/tile_data = PackedInt32Array(-262086, 0, 0, 0, 131072, 0, 1, 131072, 0, 2, 131072, 0, 3, 131072, 0, 4, 131072, 0, 5, 131072, 0, 6, 131072, 0, 7, 131072, 0, 8, 131072, 0, 9, 131072, 0, 10, 131072, 0, 11, 131072, 0, 12, 131072, 0, 13, 131072, 0, 14, 131072, 0, 15, 131072, 0, 16, 131072, 0, 17, 131072, 0, 18, 131072, 0, 19, 131072, 0, 20, 131072, 0, 21, 131072, 0, 22, 131072, 0, 23, 131072, 0, 24, 131072, 0, 25, 131072, 0, 26, 131072, 0, 27, 131072, 0, 28, 131072, 0, 29, 131072, 0, 30, 131072, 0, 31, 131072, 0, 32, 131072, 0, 33, 131072, 0, 34, 131072, 0, 35, 131072, 0, 36, 131072, 0, 37, 131072, 0, 38, 131072, 0, 39, 131072, 0, 65536, 131072, 0, 65537, 131072, 0, 65538, 131072, 0, 65539, 131072, 0, 65540, 131072, 0, 65541, 131072, 0, 65542, 131072, 0, 65543, 131072, 0, 65544, 131072, 0, 65545, 131072, 0, 65546, 131072, 0, 65547, 131072, 0, 65548, 131072, 0, 65549, 131072, 0, 65550, 131072, 0, 65551, 131072, 0, 65552, 131072, 0, 65553, 131072, 0, 65554, 131072, 0, 65555, 131072, 0, 65556, 131072, 0, 65557, 131072, 0, 65558, 131072, 0, 65559, 131072, 0, 65560, 131072, 0, 65561, 131072, 0, 65562, 131072, 0, 65563, 131072, 0, 65564, 131072, 0, 65565, 131072, 0, 65566, 131072, 0, 65567, 131072, 0, 65568, 131072, 0, 65569, 131072, 0, 65570, 131072, 0, 65571, 131072, 0, 65572, 131072, 0, 65573, 131072, 0, 65574, 131072, 0, 65575, 131072, 0, 131072, 131072, 0, 131073, 131072, 0, 131074, 131072, 0, 131075, 131072, 0, 131076, 131072, 0, 131077, 131072, 0, 131078, 131072, 0, 131079, 131072, 0, 131080, 131072, 0, 131081, 131072, 0, 131082, 131072, 0, 131083, 131072, 0, 131084, 131072, 0, 131085, 131072, 0, 131086, 131072, 0, 131087, 131072, 0, 131088, 131072, 0, 131089, 131072, 0, 131090, 131072, 0, 131091, 131072, 0, 131092, 131072, 0, 131093, 131072, 0, 131094, 131072, 0, 131095, 131072, 0, 131096, 131072, 0, 131097, 131072, 0, 131098, 131072, 0, 131099, 131072, 0, 131100, 131072, 0, 131101, 131072, 0, 131102, 131072, 0, 131103, 131072, 0, 131104, 131072, 0, 131105, 131072, 0, 131106, 131072, 0, 131107, 131072, 0, 131108, 131072, 0, 131109, 131072, 0, 131110, 131072, 0, 131111, 131072, 0, 196608, 131072, 0, 196609, 131072, 0, 196610, 131072, 0, 196611, 131072, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 131072, 0, 196646, 131072, 0, 196647, 131072, 0, 262144, 131072, 0, 262145, 131072, 0, 262146, 131072, 0, 262147, 131072, 0, 262148, 0, 0, 262149, 65536, 0, 262150, 65536, 0, 262151, 65536, 0, 262152, 65536, 0, 262153, 65536, 0, 262154, 65536, 0, 262155, 65536, 0, 262156, 65536, 0, 262157, 65536, 0, 262158, 65536, 0, 262159, 65536, 0, 262160, 65536, 0, 262161, 65536, 0, 262162, 65536, 0, 262163, 65536, 0, 262164, 65536, 0, 262165, 65536, 0, 262166, 65536, 0, 262167, 65536, 0, 262168, 65536, 0, 262169, 65536, 0, 262170, 65536, 0, 262171, 65536, 0, 262172, 65536, 0, 262173, 65536, 0, 262174, 65536, 0, 262175, 65536, 0, 262176, 65536, 0, 262177, 65536, 0, 262178, 65536, 0, 262179, 65536, 0, 262180, 0, 0, 262181, 131072, 0, 262182, 131072, 0, 262183, 131072, 0, 327680, 131072, 0, 327681, 131072, 0, 327682, 131072, 0, 327683, 131072, 0, 327684, 0, 0, 327685, 65536, 0, 327686, 65536, 0, 327687, 65536, 0, 327688, 65536, 0, 327689, 65536, 0, 327690, 65536, 0, 327691, 65536, 0, 327692, 65536, 0, 327693, 65536, 0, 327694, 65536, 0, 327695, 65536, 0, 327696, 65536, 0, 327697, 65536, 0, 327698, 65536, 0, 327699, 65536, 0, 327700, 65536, 0, 327701, 65536, 0, 327702, 65536, 0, 327703, 65536, 0, 327704, 65536, 0, 327705, 65536, 0, 327706, 65536, 0, 327707, 65536, 0, 327708, 65536, 0, 327709, 65536, 0, 327710, 65536, 0, 327711, 65536, 0, 327712, 65536, 0, 327713, 65536, 0, 327714, 65536, 0, 327715, 65536, 0, 327716, 0, 0, 327717, 131072, 0, 327718, 131072, 0, 327719, 131072, 0, 393216, 131072, 0, 393217, 131072, 0, 393218, 131072, 0, 393219, 131072, 0, 393220, 0, 0, 393221, 65536, 0, 393222, 65536, 0, 393223, 65536, 0, 393224, 65536, 0, 393225, 65536, 0, 393226, 65536, 0, 393227, 65536, 0, 393228, 65536, 0, 393229, 65536, 0, 393230, 65536, 0, 393231, 65536, 0, 393232, 65536, 0, 393233, 65536, 0, 393234, 65536, 0, 393235, 65536, 0, 393236, 65536, 0, 393237, 65536, 0, 393238, 65536, 0, 393239, 65536, 0, 393240, 65536, 0, 393241, 65536, 0, 393242, 65536, 0, 393243, 65536, 0, 393244, 65536, 0, 393245, 65536, 0, 393246, 65536, 0, 393247, 65536, 0, 393248, 65536, 0, 393249, 65536, 0, 393250, 65536, 0, 393251, 65536, 0, 393252, 0, 0, 393253, 131072, 0, 393254, 131072, 0, 393255, 131072, 0, 458752, 131072, 0, 458753, 131072, 0, 458754, 131072, 0, 458755, 131072, 0, 458756, 0, 0, 458757, 65536, 0, 458758, 65536, 0, 458759, 65536, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 65536, 0, 458772, 65536, 0, 458773, 65536, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 65536, 0, 458786, 65536, 0, 458787, 65536, 0, 458788, 0, 0, 458789, 131072, 0, 458790, 131072, 0, 458791, 131072, 0, 524288, 131072, 0, 524289, 131072, 0, 524290, 131072, 0, 524291, 131072, 0, 524292, 0, 0, 524293, 65536, 0, 524294, 65536, 0, 524295, 65536, 0, 524296, 0, 0, 524297, 131072, 0, 524298, 131072, 0, 524299, 131072, 0, 524300, 131072, 0, 524301, 131072, 0, 524302, 131072, 0, 524303, 131072, 0, 524304, 131072, 0, 524305, 131072, 0, 524306, 0, 0, 524307, 65536, 0, 524308, 65536, 0, 524309, 65536, 0, 524310, 0, 0, 524311, 131072, 0, 524312, 131072, 0, 524313, 131072, 0, 524314, 131072, 0, 524315, 131072, 0, 524316, 131072, 0, 524317, 131072, 0, 524318, 131072, 0, 524319, 131072, 0, 524320, 0, 0, 524321, 65536, 0, 524322, 65536, 0, 524323, 65536, 0, 524324, 0, 0, 524325, 131072, 0, 524326, 131072, 0, 524327, 131072, 0, 589824, 131072, 0, 589825, 131072, 0, 589826, 131072, 0, 589827, 131072, 0, 589828, 0, 0, 589829, 65536, 0, 589830, 65536, 0, 589831, 65536, 0, 589832, 0, 0, 589833, 131072, 0, 589834, 131072, 0, 589835, 131072, 0, 589836, 131072, 0, 589837, 131072, 0, 589838, 131072, 0, 589839, 131072, 0, 589840, 131072, 0, 589841, 131072, 0, 589842, 0, 0, 589843, 65536, 0, 589844, 65536, 0, 589845, 65536, 0, 589846, 0, 0, 589847, 131072, 0, 589848, 131072, 0, 589849, 131072, 0, 589850, 131072, 0, 589851, 131072, 0, 589852, 131072, 0, 589853, 131072, 0, 589854, 131072, 0, 589855, 131072, 0, 589856, 0, 0, 589857, 65536, 0, 589858, 65536, 0, 589859, 65536, 0, 589860, 0, 0, 589861, 131072, 0, 589862, 131072, 0, 589863, 131072, 0, 655360, 131072, 0, 655361, 131072, 0, 655362, 131072, 0, 655363, 131072, 0, 655364, 0, 0, 655365, 65536, 0, 655366, 65536, 0, 655367, 65536, 0, 655368, 0, 0, 655369, 131072, 0, 655370, 131072, 0, 655371, 131072, 0, 655372, 131072, 0, 655373, 131072, 0, 655374, 131072, 0, 655375, 131072, 0, 655376, 131072, 0, 655377, 131072, 0, 655378, 0, 0, 655379, 65536, 0, 655380, 65536, 0, 655381, 65536, 0, 655382, 0, 0, 655383, 131072, 0, 655384, 131072, 0, 655385, 131072, 0, 655386, 131072, 0, 655387, 131072, 0, 655388, 131072, 0, 655389, 131072, 0, 655390, 131072, 0, 655391, 131072, 0, 655392, 0, 0, 655393, 65536, 0, 655394, 65536, 0, 655395, 65536, 0, 655396, 0, 0, 655397, 131072, 0, 655398, 131072, 0, 655399, 131072, 0, 720896, 131072, 0, 720897, 131072, 0, 720898, 131072, 0, 720899, 131072, 0, 720900, 0, 0, 720901, 65536, 0, 720902, 65536, 0, 720903, 65536, 0, 720904, 0, 0, 720905, 131072, 0, 720906, 131072, 0, 720907, 131072, 0, 720908, 131072, 0, 720909, 131072, 0, 720910, 131072, 0, 720911, 131072, 0, 720912, 131072, 0, 720913, 131072, 0, 720914, 0, 0, 720915, 65536, 0, 720916, 65536, 0, 720917, 65536, 0, 720918, 0, 0, 720919, 131072, 0, 720920, 131072, 0, 720921, 131072, 0, 720922, 131072, 0, 720923, 131072, 0, 720924, 131072, 0, 720925, 131072, 0, 720926, 131072, 0, 720927, 131072, 0, 720928, 0, 0, 720929, 65536, 0, 720930, 65536, 0, 720931, 65536, 0, 720932, 0, 0, 720933, 131072, 0, 720934, 131072, 0, 720935, 131072, 0, 786432, 131072, 0, 786433, 131072, 0, 786434, 131072, 0, 786435, 131072, 0, 786436, 0, 0, 786437, 65536, 0, 786438, 65536, 0, 786439, 65536, 0, 786440, 0, 0, 786441, 131072, 0, 786442, 131072, 0, 786443, 131072, 0, 786444, 131072, 0, 786445, 131072, 0, 786446, 131072, 0, 786447, 131072, 0, 786448, 131072, 0, 786449, 131072, 0, 786450, 0, 0, 786451, 65536, 0, 786452, 65536, 0, 786453, 65536, 0, 786454, 0, 0, 786455, 131072, 0, 786456, 131072, 0, 786457, 131072, 0, 786458, 131072, 0, 786459, 131072, 0, 786460, 131072, 0, 786461, 131072, 0, 786462, 131072, 0, 786463, 131072, 0, 786464, 0, 0, 786465, 65536, 0, 786466, 65536, 0, 786467, 65536, 0, 786468, 0, 0, 786469, 131072, 0, 786470, 131072, 0, 786471, 131072, 0, 851968, 131072, 0, 851969, 131072, 0, 851970, 131072, 0, 851971, 131072, 0, 851972, 0, 0, 851973, 65536, 0, 851974, 65536, 0, 851975, 65536, 0, 851976, 0, 0, 851977, 131072, 0, 851978, 131072, 0, 851979, 131072, 0, 851980, 131072, 0, 851981, 131072, 0, 851982, 131072, 0, 851983, 131072, 0, 851984, 131072, 0, 851985, 131072, 0, 851986, 0, 0, 851987, 65536, 0, 851988, 65536, 0, 851989, 65536, 0, 851990, 0, 0, 851991, 131072, 0, 851992, 131072, 0, 851993, 131072, 0, 851994, 131072, 0, 851995, 131072, 0, 851996, 131072, 0, 851997, 131072, 0, 851998, 131072, 0, 851999, 131072, 0, 852000, 0, 0, 852001, 65536, 0, 852002, 65536, 0, 852003, 65536, 0, 852004, 0, 0, 852005, 131072, 0, 852006, 131072, 0, 852007, 131072, 0, 917504, 131072, 0, 917505, 131072, 0, 917506, 131072, 0, 917507, 131072, 0, 917508, 0, 0, 917509, 65536, 0, 917510, 65536, 0, 917511, 65536, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 65536, 0, 917524, 65536, 0, 917525, 65536, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 65536, 0, 917538, 65536, 0, 917539, 65536, 0, 917540, 0, 0, 917541, 131072, 0, 917542, 131072, 0, 917543, 131072, 0, 983040, 131072, 0, 983041, 131072, 0, 983042, 131072, 0, 983043, 131072, 0, 983044, 0, 0, 983045, 65536, 0, 983046, 65536, 0, 983047, 65536, 0, 983048, 65536, 0, 983049, 65536, 0, 983050, 65536, 0, 983051, 65536, 0, 983052, 65536, 0, 983053, 65536, 0, 983054, 65536, 0, 983055, 65536, 0, 983056, 65536, 0, 983057, 65536, 0, 983058, 65536, 0, 983059, 65536, 0, 983060, 65536, 0, 983061, 65536, 0, 983062, 65536, 0, 983063, 65536, 0, 983064, 65536, 0, 983065, 65536, 0, 983066, 65536, 0, 983067, 65536, 0, 983068, 65536, 0, 983069, 65536, 0, 983070, 65536, 0, 983071, 65536, 0, 983072, 65536, 0, 983073, 65536, 0, 983074, 65536, 0, 983075, 65536, 0, 983076, 0, 0, 983077, 131072, 0, 983078, 131072, 0, 983079, 131072, 0, 1048576, 131072, 0, 1048577, 131072, 0, 1048578, 131072, 0, 1048579, 131072, 0, 1048580, 0, 0, 1048581, 65536, 0, 1048582, 65536, 0, 1048583, 65536, 0, 1048584, 65536, 0, 1048585, 65536, 0, 1048586, 65536, 0, 1048587, 65536, 0, 1048588, 65536, 0, 1048589, 65536, 0, 1048590, 65536, 0, 1048591, 65536, 0, 1048592, 65536, 0, 1048593, 65536, 0, 1048594, 65536, 0, 1048595, 65536, 0, 1048596, 65536, 0, 1048597, 65536, 0, 1048598, 65536, 0, 1048599, 65536, 0, 1048600, 65536, 0, 1048601, 65536, 0, 1048602, 65536, 0, 1048603, 65536, 0, 1048604, 65536, 0, 1048605, 65536, 0, 1048606, 65536, 0, 1048607, 65536, 0, 1048608, 65536, 0, 1048609, 65536, 0, 1048610, 65536, 0, 1048611, 65536, 0, 1048612, 0, 0, 1048613, 131072, 0, 1048614, 131072, 0, 1048615, 131072, 0, 1114112, 131072, 0, 1114113, 131072, 0, 1114114, 131072, 0, 1114115, 131072, 0, 1114116, 0, 0, 1114117, 65536, 0, 1114118, 65536, 0, 1114119, 65536, 0, 1114120, 65536, 0, 1114121, 65536, 0, 1114122, 65536, 0, 1114123, 65536, 0, 1114124, 65536, 0, 1114125, 65536, 0, 1114126, 65536, 0, 1114127, 65536, 0, 1114128, 65536, 0, 1114129, 65536, 0, 1114130, 65536, 0, 1114131, 65536, 0, 1114132, 65536, 0, 1114133, 65536, 0, 1114134, 65536, 0, 1114135, 65536, 0, 1114136, 65536, 0, 1114137, 65536, 0, 1114138, 65536, 0, 1114139, 65536, 0, 1114140, 65536, 0, 1114141, 65536, 0, 1114142, 65536, 0, 1114143, 65536, 0, 1114144, 65536, 0, 1114145, 65536, 0, 1114146, 65536, 0, 1114147, 65536, 0, 1114148, 0, 0, 1114149, 131072, 0, 1114150, 131072, 0, 1114151, 131072, 0, 1179648, 131072, 0, 1179649, 131072, 0, 1179650, 131072, 0, 1179651, 131072, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 131072, 0, 1179686, 131072, 0, 1179687, 131072, 0, 1245184, 131072, 0, 1245185, 131072, 0, 1245186, 131072, 0, 1245187, 131072, 0, 1245188, 131072, 0, 1245189, 131072, 0, 1245190, 131072, 0, 1245191, 131072, 0, 1245192, 131072, 0, 1245193, 131072, 0, 1245194, 131072, 0, 1245195, 131072, 0, 1245196, 131072, 0, 1245197, 131072, 0, 1245198, 131072, 0, 1245199, 131072, 0, 1245200, 131072, 0, 1245201, 131072, 0, 1245202, 131072, 0, 1245203, 131072, 0, 1245204, 131072, 0, 1245205, 131072, 0, 1245206, 131072, 0, 1245207, 131072, 0, 1245208, 131072, 0, 1245209, 131072, 0, 1245210, 131072, 0, 1245211, 131072, 0, 1245212, 131072, 0, 1245213, 131072, 0, 1245214, 131072, 0, 1245215, 131072, 0, 1245216, 131072, 0, 1245217, 131072, 0, 1245218, 131072, 0, 1245219, 131072, 0, 1245220, 131072, 0, 1245221, 131072, 0, 1245222, 131072, 0, 1245223, 131072, 0, 1310720, 131072, 0, 1310721, 131072, 0, 1310722, 131072, 0, 1310723, 131072, 0, 1310724, 131072, 0, 1310725, 131072, 0, 1310726, 131072, 0, 1310727, 131072, 0, 1310728, 131072, 0, 1310729, 131072, 0, 1310730, 131072, 0, 1310731, 131072, 0, 1310732, 131072, 0, 1310733, 131072, 0, 1310734, 131072, 0, 1310735, 131072, 0, 1310736, 131072, 0, 1310737, 131072, 0, 1310738, 131072, 0, 1310739, 131072, 0, 1310740, 131072, 0, 1310741, 131072, 0, 1310742, 131072, 0, 1310743, 131072, 0, 1310744, 131072, 0, 1310745, 131072, 0, 1310746, 131072, 0, 1310747, 131072, 0, 1310748, 131072, 0, 1310749, 131072, 0, 1310750, 131072, 0, 1310751, 131072, 0, 1310752, 131072, 0, 1310753, 131072, 0, 1310754, 131072, 0, 1310755, 131072, 0, 1310756, 131072, 0, 1310757, 131072, 0, 1310758, 131072, 0, 1310759, 131072, 0, 1376256, 131072, 0, 1376257, 131072, 0, 1376258, 131072, 0, 1376259, 131072, 0, 1376260, 131072, 0, 1376261, 131072, 0, 1376262, 131072, 0, 1376263, 131072, 0, 1376264, 131072, 0, 1376265, 131072, 0, 1376266, 131072, 0, 1376267, 131072, 0, 1376268, 131072, 0, 1376269, 131072, 0, 1376270, 131072, 0, 1376271, 131072, 0, 1376272, 131072, 0, 1376273, 131072, 0, 1376274, 131072, 0, 1376275, 131072, 0, 1376276, 131072, 0, 1376277, 131072, 0, 1376278, 131072, 0, 1376279, 131072, 0, 1376280, 131072, 0, 1376281, 131072, 0, 1376282, 131072, 0, 1376283, 131072, 0, 1376284, 131072, 0, 1376285, 131072, 0, 1376286, 131072, 0, 1376287, 131072, 0, 1376288, 131072, 0, 1376289, 131072, 0, 1376290, 131072, 0, 1376291, 131072, 0, 1376292, 131072, 0, 1376293, 131072, 0, 1376294, 131072, 0, 1376295, 131072, 0, 1441792, 131072, 0, 1441793, 131072, 0, 1441794, 131072, 0, 1441795, 131072, 0, 1441796, 131072, 0, 1441797, 131072, 0, 1441798, 131072, 0, 1441799, 131072, 0, 1441800, 131072, 0, 1441801, 131072, 0, 1441802, 131072, 0, 1441803, 131072, 0, 1441804, 131072, 0, 1441805, 131072, 0, 1441806, 131072, 0, 1441807, 131072, 0, 1441808, 131072, 0, 1441809, 131072, 0, 1441810, 131072, 0, 1441811, 131072, 0, 1441812, 131072, 0, 1441813, 131072, 0, 1441814, 131072, 0, 1441815, 131072, 0, 1441816, 131072, 0, 1441817, 131072, 0, 1441818, 131072, 0, 1441819, 131072, 0, 1441820, 131072, 0, 1441821, 131072, 0, 1441822, 131072, 0, 1441823, 131072, 0, 1441824, 131072, 0, 1441825, 131072, 0, 1441826, 131072, 0, 1441827, 131072, 0, 1441828, 131072, 0, 1441829, 131072, 0, 1441830, 131072, 0, 1441831, 131072, 0)

[node name="UI" type="CanvasLayer" parent="."]

[node name="FPS" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -511.333
offset_top = 20.0
offset_right = -111.333
offset_bottom = 123.0
grow_horizontal = 0
scale = Vector2(0.25, 0.25)
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_8uusr")
theme_override_font_sizes/font_size = 100
text = "FPS: 100"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Host" type="Button" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.5
offset_top = -289.0
offset_right = 600.5
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
pivot_offset = Vector2(600.5, 254)
theme_override_fonts/font = ExtResource("2_8uusr")
theme_override_font_sizes/font_size = 500
text = "Host"

[node name="Join" type="Button" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.5
offset_top = -219.0
offset_right = 600.5
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
pivot_offset = Vector2(600.5, 254)
theme_override_fonts/font = ExtResource("2_8uusr")
theme_override_font_sizes/font_size = 500
text = "Join"

[node name="UUID" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1985.5
offset_right = 1985.5
offset_bottom = 520.0
grow_horizontal = 2
scale = Vector2(0.1, 0.1)
pivot_offset = Vector2(1985.5, 0)
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_8uusr")
theme_override_font_sizes/font_size = 500
text = "INSERT UUID HERE"
horizontal_alignment = 3
vertical_alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://assets/scenes/Player.tscn")
spawn_path = NodePath("..")

[node name="Node2D" type="Node2D" parent="."]

[connection signal="pressed" from="UI/Host" to="." method="start_server"]
[connection signal="pressed" from="UI/Join" to="." method="join_server"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
